@@ -1,0 +1,12 @@
+[Desktop Entry]
+Encoding=UTF-8
+Type=Application
+Name=Oriflamms
+Version=@ORIFLAMMS_PACKAGE_VERSION@
+GenericName=Textual data analysis software
+Comment=Mediaval text-image alignment
+Icon=/usr/share/oriflamms/icon.png
+Exec=/usr/bin/oriflamms
+Terminal=true
+Categories=Sciences;Education;Science;
+Name[en_GB]=Oriflamms
